kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/duplicate_labels/explicit.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let f = fun _(X~x: Nat, X~y: Nat): Nat {
    Nat.o
};
